Bug 255599 - [WebGPU] Shader module shouldn't try to read constants if there's no library
Summary: [WebGPU] Shader module shouldn't try to read constants if there's no library
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-18 06:30 PDT by Tadeu Zagallo
Modified: 2023-04-19 01:48 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-04-18 06:30:53 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-04-18 06:31:12 PDT
<rdar://problem/108197471>
Comment 2 Tadeu Zagallo 2023-04-18 06:34:29 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12859
Comment 3 EWS 2023-04-19 01:48:11 PDT
Committed 263120@main (219a3d11b718): <https://commits.webkit.org/263120@main>

Reviewed commits have been landed. Closing PR #12859 and removing active labels.