[WebGPU] Shader module shouldn't try to read constants if there's no library https://bugs.webkit.org/show_bug.cgi?id=255599 rdar://108197471

Reviewed by Mike Wyrzykowski.

We currently crash when creating a render pipeline and providing constant overrides
unless the module was early compiled (which is currently disabled). This is a trivial
change to check if we have a successfully compiled library before trying to read
the constants from it.

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::getNamedFunction const):

Canonical link: https://commits.webkit.org/263120@main